--- a/MyWhatsAppSeleniumProj/WebContent/Index.html
+++ b/MyWhatsAppSeleniumProj/WebContent/Index.html
@@ -3,9 +3,10 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Send whatsapp Demo</title>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/core.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/sha256.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/hmac.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/core.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/sha256.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/hmac.min.js"></script>
+<script type="text/javascript" src="whatsAppAPI.js"></script>
 </head>
 <body>
 <script>
@@ -39,29 +40,8 @@ window.addEventListener("load", function () {
     XHR.send(form);
   }
   function sendDataSch() {
-	    var XHR = new XMLHttpRequest();
-	    // Define what happens on successful data submission
-	    XHR.addEventListener("load", function(event) {
-	      alert(event.target.responseText);
-	    });
-	    // Define what happens in case of error
-	    XHR.addEventListener("error", function(event) {
-	      alert('Oups! Something goes wrong.');
-	    });
-	    // Set up our request
-	    var server = "http://localhost:8080";
-	    var uri = "/MyWhatsAppSeleniumProj/WhatsApp";
-	    var url = server + uri + "?nb=" + schform.elements["nb"].value + "&msg=" + schform.elements["msg"].value;
-	    var seconds = Math.round((new Date).getTime()/1000);
-	    var userid = "12345678";
-	    var secret = "changeit";
-	    XHR.open("POST", url);
-	    //Set autentication auth-schema HmacAlgorithm,TimeStampUnixEpochUTC,Userid,HMAC-SHA256(URI+TimeStamp)
-	    //Authentication: sch SHA256,1503753381,12345678,2F05A80ECA8536AD1AC420C7D7E0BAEDAA1A5C0AFB48BDED2D3C79A123D8E6A1
-	    var hmac = CryptoJS.HmacSHA256(uri + seconds.toString(), secret).toString();
-	    XHR.setRequestHeader("Authorization", "sch SHA256," + seconds + "," + userid + "," + hmac);
-	    // The data sent is what the user provided in the form
-	    XHR.send(form);
+	  sendWhatsAppMsg(schform.elements["nb"].value,schform.elements["msg"].value);
+
 	  }
   // Access the form element...
   var form = document.getElementById("torchForm");
